fix display issue on mobile device

--- a/EventPublisher/src/main/webapp/styles/style.css
+++ b/EventPublisher/src/main/webapp/styles/style.css
@@ -106,7 +106,6 @@
 #nav {
 	width: 5%;
 	float: left;
-	padding: 5px;
 	overflow: hidden;
 	position: relative;
 	left: 95%
